fix meny spacing

--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@ footer .this-version {
 .meny ul li {
   list-style: none;
   padding: 3px 0 3px 10px;
-  display: inline-block;
+  display: inline-flex;
   width: 240px;
   font-size: 16px;
 }
